# AI-Deplyoment-Decision-Engine

./: .gitignore  Dockerfile  GITHUB_RELEASE_READY.md  GIT_CLEAN_PUSH_REPORT.md  LICENSE  Makefile  README.md  gui_app.py  main.py  pyproject.toml
experiments/: CLEAN_REPO_REPORT.md  RESTRUCTURE_REPORT.md  SYSTEM_PERFORMANCE_REPORT.md  cleanup_validation_results.json  experiment_report.txt  experiment_results.json  final_validation.json  run_experiment.py
model_bundle_v1/: README.md  spec.json
model_bundle_v2/: README.md
scripts/: freeze_wheels.sh  generate_fingerprint.py  generate_hashes.py  start_server.py  verify_fingerprint.py  verify_hashes.py  verify_wheels.sh
src/: app_state.py  format_router.py
src/api/: gui_analysis_api.py  gui_app.py  gui_calibration_api.py  gui_decision_api.py  gui_routes.py  gui_state_api.py
src/api/routes/: analysis_routes.py  decision_routes.py  deployment_routes.py  misc_routes.py  model_routes.py
src/cli/: gate_cli.py  main.py
src/core/: action_plan.py  advisor_report.py  analysis_reliability.py  benchmark_calibration.py  calibration_history.py  calibration_schema_validator.py  confidence.py  confidence_calibration.py  continuous_learning.py  decision.py  decision_layer_integration.py  decision_schema.py  decision_trace.py  deployment_profile.py  deployment_summary.py  device_profiler.py  explainability.py  feature_extractor.py  fix_suggester.py  framework_adapter.py  global_decision.py  gpu_calibration.py  ground_truth_db.py  hardware_selector.py  input_profile.py  invariants.py  latency_measurement.py  logging_config.py  ml_decision_engine.py  model_analysis.py  model_hash.py  model_summary.py  ood_detection.py  optional_dependencies.py  paths.py  perf_behavior.py  perf_risk.py  persistence.py  pipeline.py  policy_loader.py  (+9 more)
src/core/contracts/: __init__.py  decision_result.py  model_analysis.py  runtime_evaluation.py
src/core/decision_engine/: hw_override.py
src/core/hardware/: scaling.py  tables.py
src/core/model_analysis/: __init__.py  analyzer.py  cache.py  constants.py  parser.py  result.py  validator.py
src/core/model_facts/: analyzer.py  builder.py
src/core/runtime/: __init__.py  evaluator.py  execution_loop.py  openvino_evaluator.py  postprocess.py  registry.py  runtimes.py  tensorrt_native_evaluator.py  tf_evaluator.py  tflite_evaluator.py
src/core/scoring/: calibration_math.py  calibration_validator.py  confidence_scorer.py  utility_scorer.py
src/diagnostics/: __init__.py  report.py
src/gui/static/: app.js  index.html
src/rules/: __init__.py  unsupported_operator.py
src/services/: analysis_pipeline_service.py  hardware_profiler.py  onnx_benchmark_service.py  upload_service.py
src/training/: data_collector.py  dataset.py  train.py
src/validation/: __init__.py  execution_verifier.py  interpret_validation.py  operator_compatibility.py  runtime_validator.py
tests/golden/: __init__.py  test_golden_baseline.py
training/: __init__.py  build_dataset_from_telemetry.py  data_generator.py  generate_telemetry_events.py  train_decision_model.py
