[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "deployment-decision-engine"
version = "1.0.0"
description = "A comprehensive tool for analyzing ONNX models and predicting deployment feasibility"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Deployment Decision Engine Contributors"}
]
maintainers = [
    {name = "Deployment Decision Engine Contributors"}
]
keywords = [
    "onnx",
    "deployment",
    "machine-learning",
    "inference",
    "tensorrt",
    "onnxruntime",
    "tflite",
    "model-analysis",
    "mlops"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Quality Assurance",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
requires-python = ">=3.9"
dependencies = [
    "onnx>=1.14.0",
    "numpy>=1.24.0",
]

[project.optional-dependencies]
# Runtime validation dependencies
onnxruntime = ["onnxruntime>=1.15.0"]
tensorrt = ["tensorrt>=8.6.0; platform_system == 'Linux'"]
tflite = ["tflite-runtime>=2.13.0"]
all-runtimes = [
    "deployment-decision-engine[onnxruntime,tflite]",
]

# Development dependencies
dev = [
    "deployment-decision-engine[all-runtimes]",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "pytest-timeout>=2.1.0",
    "black>=23.7.0",
    "isort>=5.12.0",
    "mypy>=1.5.0",
    "flake8>=6.1.0",
    "pylint>=2.17.0",
]

# Documentation dependencies
docs = [
    "sphinx>=7.1.0",
    "sphinx-rtd-theme>=1.3.0",
    "sphinx-autodoc-typehints>=1.24.0",
    "myst-parser>=2.0.0",
]

# LSP server dependencies
lsp = [
    "pyyaml>=6.0.0",
]

# All optional dependencies
all = [
    "deployment-decision-engine[dev,docs,lsp,all-runtimes]",
]

[project.urls]
Homepage = "https://github.com/yourusername/deployment_decision_engine"
Documentation = "https://github.com/yourusername/deployment_decision_engine/wiki"
Repository = "https://github.com/yourusername/deployment_decision_engine"
"Bug Tracker" = "https://github.com/yourusername/deployment_decision_engine/issues"
Changelog = "https://github.com/yourusername/deployment_decision_engine/blob/main/CHANGELOG.md"

[project.scripts]
deploycheck = "src.cli.main:main"
deploycheck-batch = "src.cli.batch:main"
deploycheck-lsp = "deployment_decision_engine.lsp.server:main"

# Console entry points (alternative to project.scripts)
[project.entry-points."console_scripts"]
deploycheck = "src.cli.main:main"
deploycheck-batch = "src.cli.batch:main"
deploycheck-lsp = "deployment_decision_engine.lsp.server:main"

# Tool configurations
[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]
include = ["src.*"]
exclude = ["tests*", "tests.*", "src.tests*", "deploycheck-vscode*"]

[tool.setuptools.package-data]
"*" = ["*.json", "*.yaml", "*.yml", "*.txt"]

# Black configuration
[tool.black]
line-length = 100
target-version = ["py39", "py310", "py311", "py312"]
include = '\.pyi?$'
exclude = '''
/(
    \.git
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | _build
    | buck-out
    | build
    | dist
    | deploycheck-vscode
)/
'''

# isort configuration
[tool.isort]
profile = "black"
line_length = 100
known_first_party = ["deployment_decision_engine", "cli", "core", "api", "diagnostics", "validation", "detectors", "rules", "runtimes"]
skip_gitignore = true

# pytest configuration
[tool.pytest.ini_options]
minversion = "7.0"
pythonpath = ["."]
testpaths = ["src/tests", "tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-ra",
    "--strict-markers",
    "--strict-config",
    "--showlocals",
    "--tb=short",
]
markers = [
    "integration: Integration tests (slower, may require external dependencies)",
    "slow: Slow running tests",
    "unit: Unit tests (fast, isolated)",
    "requires_onnxruntime: Tests that require onnxruntime to be installed",
    "requires_tensorrt: Tests that require TensorRT to be installed",
    "requires_tflite: Tests that require TFLite to be installed",
]
filterwarnings = [
    "error",
    "ignore::DeprecationWarning",
    "ignore::PendingDeprecationWarning",
]
# timeout = 300  # Commented out - pytest-timeout plugin not installed

# Coverage configuration
[tool.coverage.run]
source = ["."]
omit = [
    "tests/*",
    "*/tests/*",
    "deploycheck-vscode/*",
    "setup.py",
]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
    "if typing.TYPE_CHECKING:",
    "@abstractmethod",
]
precision = 2

# mypy configuration
[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
strict_equality = true
strict_optional = true
show_error_codes = true
show_column_numbers = true
show_error_context = true

[[tool.mypy.overrides]]
module = [
    "onnx.*",
    "onnxruntime.*",
    "tensorrt.*",
    "tflite_runtime.*",
]
ignore_missing_imports = true

# Pylint configuration
[tool.pylint.main]
py-version = "3.9"
ignore = ["tests", "deploycheck-vscode"]
jobs = 0
limit-inference-results = 100
persistent = true
suggestion-mode = true

[tool.pylint.messages_control]
max-line-length = 100
disable = [
    "C0103",  # invalid-name
    "C0114",  # missing-module-docstring
    "C0115",  # missing-class-docstring
    "C0116",  # missing-function-docstring
    "R0903",  # too-few-public-methods
    "R0913",  # too-many-arguments
    "R0914",  # too-many-locals
    "W0212",  # protected-access
]

[tool.pylint.format]
max-line-length = 100
max-module-lines = 2000

# Bandit configuration (security linter)
[tool.bandit]
exclude_dirs = ["tests", "deploycheck-vscode"]
skips = ["B101"]  # Allow assert statements

# Ruff configuration (fast Python linter)
[tool.ruff]
target-version = "py39"
line-length = 100
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
    "ARG", # flake8-unused-arguments
    "SIM", # flake8-simplify
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "B904",  # raise without from inside except
]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".hg",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "venv",
    "deploycheck-vscode",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["ARG", "S101"]
"__init__.py" = ["F401"]
